Changed texts a bit more, fixed some translations

--- a/index.html
+++ b/index.html
@@ -313,14 +313,14 @@
                 <span data-i18n="leadership1Meta">01/2022 – Present</span>
                 <h4 data-i18n="leadership1Title">Co-Founder — Suomen Metsä</h4>
                 <p data-i18n="leadership1Body">
-                  Organized fundraising and operations; raised ~€100k to protect forest land.
+                  Organized fundraising and operations; raised ~€100k to protect forest with focus on biodiversity.
                 </p>
               </div>
               <div class="timeline-item">
                 <span data-i18n="leadership2Meta">11/2021 – 10/2024</span>
                 <h4 data-i18n="leadership2Title">Board Member — E3 Innovations Oy</h4>
                 <p data-i18n="leadership2Body">
-                  Vehicle data analytics startup exposure to product and tech strategy.
+                  Vehicle data analytics startup exposure to business and fund raising strategy.
                 </p>
               </div>
               <div class="timeline-item">
