changed photo placement

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         </div>
         <div class="projects-grid">
           <!-- Project: Literary Lions -->
-          <article class="card project-card" data-tags="go sql sqlite docker teamwork">
+          <article class="card project-card" data-tags="go sql sqlite docker teamwork rest-api">
             <h4 data-i18n="projectTitle3">Literary Lions Forum</h4>
             <p class="project-meta" data-i18n="projectMeta3">kood/Sisu • Go • SQLite</p>
             <p data-i18n="projectDesc3">
@@ -395,7 +395,7 @@
             </div>
             <div class="contact-item">
               <strong data-i18n="contactWebsiteLabel">Website</strong>
-              <div><a href="https://markka.net">markka.net</a></div>
+              <div><a href="/">markka.net</a></div>
             </div>
           </div>
           <div class="card" id="contact-form">
