--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title data-i18n="pageTitle">Martti Koivisto | markka.net</title>
-  <meta name="description" content="Portfolio of Martti Koivisto, a full-stack student open to junior developer roles." data-i18n-content="metaDescription" />
+  <meta name="description" content="Portfolio of Martti Koivisto, a junior full-stack developer with a strong analytical background, focusing on backend systems and data-driven software." data-i18n-content="metaDescription" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Instrument+Sans:wght@400;500;600;700&family=Syne:wght@600;700;800&display=swap" rel="stylesheet" />
