Added sticky tab links and made the 'open to junior roles' button pill clickable

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
       </div>
       <div class="header-actions">
-        <div class="status-pill" data-i18n="statusOpen">Open to junior developer roles</div>
+        <a class="status-pill" href="#contact" data-tab-link="contact" data-i18n="statusOpen">Open to junior developer roles</a>
         <div class="toggle-row">
           <button class="theme-toggle" type="button" aria-pressed="false">
             <span class="theme-label">Theme: Light</span>
