Work on About me -tab: Added soft skills in the form of 'How I work' and expanded about me description

--- a/index.html
+++ b/index.html
@@ -129,7 +129,10 @@
               I’m a career-changing software developer with a strong analytical background from the finance industry.
             </p>
             <p data-i18n="aboutBody2">
-              I apply rigorous reasoning to software development, with a growing focus on backend systems, data handling, and clean interfaces between components.
+              I bring a structured, detail-oriented approach to software development, with a growing focus on backend systems, data handling, and clean interfaces between components.
+            </p>
+            <p data-i18n="aboutBody3">
+              I’ve worked with both start-ups and established companies in local and international contexts, and I’ve had the opportunity to study the business logic of many organizations through an investor’s lens. I believe that a deep understanding of business context helps me build software that is more relevant and useful for end users.
             </p>
             <img
               src="assets/img/martti-img.png"
@@ -166,13 +169,24 @@
               </div>
             </div>
           </div>
-          <div class="card">
-            <h3 data-i18n="lookingHeading">What I’m looking for</h3>
-            <ul class="list">
-              <li data-i18n="lookingItem1">Junior Software Developer / Software Engineer roles</li>
-              <li data-i18n="lookingItem2">Teams with code reviews, mentorship, and real ownership</li>
-              <li data-i18n="lookingItem3">Opportunities to grow in backend, systems-level, and embedded software</li>
-            </ul>
+          <div class="card middle-divider-card">
+            <div class="card-section">
+              <h3 data-i18n="howIWorkHeading">How I work</h3>
+              <p class="testimonial-values" data-i18n="howIWorkValues">Curiosity | Humility | Team-first</p>
+              <p class="testimonial-quote" data-i18n="howIWorkQuote">
+                "Fantastic collaboration experience throughout. Attention to details and the drive to learn and make it better is there. 100 % reliable and dedicated to the project."
+              </p>
+              <p class="testimonial-source" data-i18n="howIWorkSource">-Peer review, student project</p>
+            </div>
+            <hr class="card-divider" aria-hidden="true">
+            <div class="card-section">
+              <h3 class="split-section-heading" data-i18n="lookingHeading">What I’m looking for</h3>
+              <ul class="list">
+                <li data-i18n="lookingItem1">Junior Software Developer / Software Engineer roles</li>
+                <li data-i18n="lookingItem2">Teams with code reviews, mentorship, and real ownership</li>
+                <li data-i18n="lookingItem3">Opportunities to grow in backend, systems-level, and embedded software</li>
+              </ul>
+            </div>
           </div>
         </div>
       </section>
