Further improved Finnish version

--- a/index.html
+++ b/index.html
@@ -132,7 +132,10 @@
               I bring a structured, detail-oriented approach to software development, with a growing focus on backend systems, data handling, and clean interfaces between components.
             </p>
             <p data-i18n="aboutBody3">
-              I’ve worked with both start-ups and established companies in local and international contexts, and I’ve had the opportunity to study the business logic of many organizations through an investor’s lens. I believe that a deep understanding of business context helps me build software that is more relevant and useful for end users.
+              I’ve worked with both start-ups and established companies in local and international contexts, and I’ve had the opportunity to study the business logic of many organizations through an investor’s lens.
+            </p>
+            <p data-i18n="aboutBody4">
+              I believe that a deep understanding of business context helps me build software that is more relevant and intuitive for end users.
             </p>
             <img
               src="assets/img/martti-img.png"
